Import purrr and cli

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,8 @@ RoxygenNote: 7.2.3
 URL: https://davidbarke.github.io/GKS_2022/
 Imports: 
     pracma
+    purrr
+    cli
 Depends: 
     R (>= 2.10)
 LazyData: true
