--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,8 +10,8 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 URL: https://davidbarke.github.io/GKS_2022/
 Imports: 
-    pracma
-    purrr
+    pracma,
+    purrr,
     cli
 Depends: 
     R (>= 2.10)
